--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="src/snake.js" charset="utf-8"></script>
     <script src="src/draw.js" charset="utf-8"></script>
     <script src="src/main.js" charset="utf-8"></script>
+    <script src="src/checkGameStatus.js" charset="utf-8"></script>
   </head>
   <body>
     <div class="container" id="keys" tabindex="0">
@@ -19,5 +20,6 @@
     <div id="hidden_tail">
 
     </div>
+    <button type="button" onclick="stopGame()" name="button">stopGame</button>
   </body>
 </html>
