--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="src/draw.js" charset="utf-8"></script>
     <script src="src/main.js" charset="utf-8"></script>
     <script src="src/checkGameStatus.js" charset="utf-8"></script>
+    <script src="src/stopGame.js" charset="utf-8"></script>
   </head>
   <body>
     <div class="container" id="keys" tabindex="0">
