added renamed checkGameStatus.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="src/snake.js" charset="utf-8"></script>
     <script src="src/draw.js" charset="utf-8"></script>
     <script src="src/main.js" charset="utf-8"></script>
-    <script src="src/checkGameStatus.js" charset="utf-8"></script>
+    <script src="src/gameStatus.js" charset="utf-8"></script>
     <script src="src/stopGame.js" charset="utf-8"></script>
   </head>
   <body>
@@ -17,10 +17,13 @@
       <table class="game" id="grid">
 
       </table>
+      <!-- <div id="">
+
+      </div> -->
     </div>
     <div id="hidden_tail">
 
     </div>
-    <button type="button" onclick="stopGame()" name="button">stopGame</button>
+    <button type="button" onclick="stopSnake()" name="button">stopGame</button>
   </body>
 </html>
