fixed a bug and now snake will stop if it will hit any edge

--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
       <table class="game" id="grid">
 
       </table>
-      <!-- <div id="">
-
-      </div> -->
     </div>
     <div id="hidden_tail">
 
     </div>
-    <button type="button" onclick="stopSnake()" name="button">stopGame</button>
+    <button type="button" onclick="game.stop()" name="button">stopGame</button>
   </body>
 </html>
