now game over message wil be shown after once game finished

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div id="hidden_tail">
 
     </div>
-    <button type="button" onclick="game.stop()" name="button">stopGame</button>
+    <div id="gameOverMsg">
+      <!-- <p>game over !!</p>
+      <button type="button" onclick="location.reload()" name="button">stopGame</button> -->
+    </div>
   </body>
 </html>
