added restart button

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
   <body>
     <div class="container" id="keys" tabindex="0">
       <table class="game" id="grid">
+        <div id ="gameOverMsg"></div>
+        <div id = "restartButton"></div>
 
       </table>
     </div>
     <div id="hidden_tail">
 
-    </div>
-    <div id="gameOverMsg">
-      <!-- <p>game over !!</p>
-      <button type="button" onclick="location.reload()" name="button">stopGame</button> -->
     </div>
   </body>
 </html>
