added feature : game score

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <script src="src/draw.js" charset="utf-8"></script>
     <script src="src/game.js" charset="utf-8"></script>
     <script src="src/main.js" charset="utf-8"></script>
-    <script src="src/gameStatus.js" charset="utf-8"></script>
   </head>
   <body>
     <div class="container" id="keys" tabindex="0">
       <table class="game" id="grid">
         <div id ="gameOverMsg"></div>
         <div id = "restartButton"></div>
-
       </table>
     </div>
     <div id="hidden_tail">
+
+    </div>
+    <div id="score">
 
     </div>
   </body>
