renamed function name

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <body>
     <div class="container" id="keys" tabindex="0">
       <table class="game" id="grid">
-        <div id ="gameOverMsg"></div>
-        <div id = "restartButton"></div>
+        <div id ="gameOverMsg">
+
+        </div>
+        <div id = "restartButton">
+
+        </div>
       </table>
     </div>
     <div id="hidden_tail">
